syntax = "proto2";
package Proto;

enum ProtoCommand
{
	ProtoCommand_Heart = 1;
	ProtoCommand_Room = 2;
	ProtoCommand_Game = 3;
}

message ProtoBaseCmd
{
	required ProtoCommand CmdHead = 1;   //主协议 
	required uint32       CmdInfo = 2;   //子协议
	required bytes        buffer = 3;    //内容
}

message CMD_HEART
{
	
}




